--- a/login-calendar/src/Components/Calendar/Calendar.css
+++ b/login-calendar/src/Components/Calendar/Calendar.css
@@ -12,6 +12,14 @@
     margin-right: auto;
   }
 
+  .header-container{
+    background-color: rgba(255, 255, 255, 0.606);
+    border-radius: 20px;
+    width: 80%;
+    margin:auto
+
+  }
+
   .calendar-parent{
     align-items: center;
     width: 100%;
@@ -101,11 +109,11 @@
   .react-calendar__tile:enabled:hover,
   .react-calendar__tile:enabled:focus {
     background-color: #e6e6e6;
-    border-radius: 20px;
+   
   }
   .react-calendar__tile--now {
     background: #ffff76;
-    border-radius: 20px;
+   
   }
   .react-calendar__tile--now:enabled:hover,
   .react-calendar__tile--now:enabled:focus {
@@ -113,7 +121,7 @@
   }
   .react-calendar__tile--hasActive {
     background: #76baff;
-    border-radius: 20px;
+    
   }
   .react-calendar__tile--hasActive:enabled:hover,
   .react-calendar__tile--hasActive:enabled:focus {
@@ -122,12 +130,12 @@
   .react-calendar__tile--active {
     background: #006edc;
     color: white;
-    border-radius: 20px;
+    
   }
   .react-calendar__tile--active:enabled:hover,
   .react-calendar__tile--active:enabled:focus {
     background: #1087ff;
-    border-radius: 20px;
+    
   }
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
