--- a/login-calendar/src/Components/Calendar/Calendar.css
+++ b/login-calendar/src/Components/Calendar/Calendar.css
@@ -1,7 +1,7 @@
 .react-calendar {
     width: 80%;
     max-width: 100%;
-    background: white;
+    background: white;/* changes main calendar background*/
     border: 1px solid #a0a096;
     border-radius: 20px;
     font-family: Arial, Helvetica, sans-serif;
